fixed spacing on SkeletonThreadCard element

--- a/src/features/ThreadCard/ThreadCard.css
+++ b/src/features/ThreadCard/ThreadCard.css
@@ -19,7 +19,8 @@
 }
 
 .ThreadCard:first-child,
-.SkeletonThreadCard:first-child {
+.SkeletonThreadCard:first-child,
+.subredditInfoContainer {
   margin-top: calc(var(--appbar-height) + 0.5rem);
 }
 
